# RK3588_ELF_Uboot

./: README.md  readme.md  start.md
install/: local_setup.sh  setup.sh
install/fishbot_bringup/lib/fishbot_bringup/: odom2tf
install/fishbot_bringup/share/fishbot_bringup/: package.sh
install/fishbot_cartographer/share/fishbot_cartographer/: package.sh
install/fishbot_description/share/fishbot_description/: package.sh
install/fishbot_interfaces/share/fishbot_interfaces/: package.dsv  package.ps1  package.sh
install/fishbot_navigation2/share/fishbot_navigation2/: local_setup.sh  package.sh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/lib/pkgconfig/: spdlog.pc
log/: latest_build
sh/: detect.sh  driver.sh  gpio_init.sh  nav.sh  npu_logger.py  openamp.sh  sensor.sh  slam.sh  task.sh  ui.sh
src/detect/: self.py
src/py_ui/: my_map.pgm  room.pos  ui.py
src/rplidar_ros/launch/: rplidar_a1_launch.py
src/rplidar_ros/rviz/: rplidar_ros.rviz
src/sensor/: CMakeLists.txt  package.xml  readme.md
src/sensor/msg/: DeviceStatus.msg
src/sensor/src/: do_something_server.cpp  human_detector_client.cpp  openamp_core1.cpp  sensor_node copy.cpp.bat  sensor_node xyc——copy.cpp  sensor_node.cpp  sensor_node_lhy.cpp
src/task_scheduler/: package.xml  setup.cfg  setup.py
src/task_scheduler/task_scheduler/: room.pos  scheduler.py
src/uboot_chat/: setup.cfg  setup.py
src/uboot_chat/test/: mic_in.py
src/uboot_chat/uboot_chat/: GetConfig.py  OneToTwo.py  calibrate.py  chat.py  denoised.py  localModel.py  micro_recognizer.py  publisher.py  sparkModel.py  speechGC.py  test.py  test_micro.py  test_micro_recognizer_denoised.py  test_micro_record.py  test_pub_msg.py  test_speech.py
src/uboot_chat/uboot_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/yolo_v5/: package.xml  setup.cfg  setup.py  yolov5_npu.py
src/yolo_v5/yolo_v5/: 730.bat  yolo_node copy.py  yolo_node.py  yolo_node_NPU.py
(+100 files in other folders)
